re PR ada/18659 (ACATS failures c32001e c64105b c95086b)

2005-12-15  Eric Botcazou  <ebotcazou@adacore.com>

	PR ada/18659
	PR ada/18819
ada/
	* misc.c (tree_sra_requested): New global.
	(gnat_init_options): Detect -ftree-sra.
	(gnat_post_options): Enable Tree-SRA only if specifically requested.

gcc/
	* doc/invoke.texi (Optimize Options): Document that
	-ftree-sra is not automatically enabled for the Ada compiler.

From-SVN: r108576